# zenodo_get

./: .coverage  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  .travis.yml  MANIFEST.in  Makefile  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.py  zenodofs.py
.circleci/: config.yml
.github/workflows/: ci.yml
src/: zenodo_get.py
test_json_py_output/: fetch_data.py  opencare-comments-anonymized.json  opencare-posts-anonymized.json  opencare-tags-anonymized.json  opencare-users-anonymized.json
tests/: Makefile  test.sh  test_api.py  test_cli.py  test_coverage.py  test_downloader.py  test_existing_file_modes.py  test_integration.py  test_simple_coverage.py  win-test.bat
zenodo_get/: __init__.py  __main__.py  downloader.py  zget.py
